--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 /vendor/
 /node_modules/
 docker-compose.yml
-docker/entrypoint.sh
+.c42/docker-compose.yml
+.c42/docker/entrypoint.sh
 
 /htdocs/.htaccess
 /htdocs/var/
