Remove modman link

--- a/htdocs/.gitignore
+++ b/htdocs/.gitignore
@@ -60,3 +60,4 @@ skin/frontend/base/default/nwdthemes
 lib/Nwdthemes/Revslider
 
 skin/frontend/base/default/images/innersense
+app/locale/fr_FR/Jumbobag_Core.csv
