--- a/.c42/docker-compose.yml.dist
+++ b/.c42/docker-compose.yml.dist
@@ -1,47 +1,58 @@
-web:
-  build: .c42/docker/Magento
-  ports:
-    - 80
-  links:
-    - db
-    - mail
-  volumes:
-    - .:/var/www
-    - .c42/docker/entrypoint.sh:/docker-entrypoint.sh
-  entrypoint: /docker-entrypoint.sh
-  command: apache2 -DFOREGROUND
-  environment:
-    VIRTUAL_HOST: jumbobag.test
+version: '3'
+services:
+    web:
+      build: .c42/docker/Magento
+      ports:
+        - 80
+      links:
+        - db
+        - mail
+      volumes:
+        - .:/var/www
+        - .c42/docker/entrypoint.sh:/docker-entrypoint.sh
+      entrypoint: /docker-entrypoint.sh
+      command: apache2 -DFOREGROUND
+      networks:
+        - default
+        - traefik
+      labels:
+        - traefik.frontend.rule=Host:jumbobag.test
+        - traefik.protocol=http
 
-db:
-  image: mysql:5.6
-  environment:
-    MYSQL_ROOT_PASSWORD: "root"
-    MYSQL_DATABASE: jumbobag
+    db:
+      image: mysql:5.6
+      environment:
+        MYSQL_ROOT_PASSWORD: "root"
+        MYSQL_DATABASE: jumbobag
 
-mail:
-  image: occitech/alpine-mailhog
-  ports:
-    - 8025
-  environment:
-    VIRTUAL_HOST: mail.jumbobag.test
-    VIRTUAL_PORT: 8025
+    mail:
+      image: occitech/alpine-mailhog
+      labels:
+        - traefik.frontend.rule=Host:pma.jumbobag.test
+        - traefik.port=8025
 
-phpmyadmin:
-  image: phpmyadmin/phpmyadmin
-  links:
-    - db
-  ports:
-    - 80
-  environment:
-    VIRTUAL_HOST: pma.jumbobag.test
+    phpmyadmin:
+      image: phpmyadmin/phpmyadmin
+      links:
+        - db
+      ports:
+        - 80
+      networks:
+        - default
+        - traefik
+      labels:
+        - traefik.frontend.rule=Host:pma.jumbobag.test
 
-composer:
-  build: .c42/docker/composer
-  links:
-    - db
-  volumes:
-    - $HOME/.composer:/composer
-    - .c42/docker/php_additional.ini:/usr/local/etc/php/conf.d/php_additional.ini
-    - .:/var/www
-  working_dir: /var/www
+    composer:
+      build: .c42/docker/composer
+      links:
+        - db
+      volumes:
+        - $HOME/.composer:/composer
+        - .c42/docker/php_additional.ini:/usr/local/etc/php/conf.d/php_additional.ini
+        - .:/var/www
+      working_dir: /var/www
+
+networks:
+    traefik:
+        external: true
