--- a/.c42/docker/entrypoint.sh.dist
+++ b/.c42/docker/entrypoint.sh.dist
@@ -39,6 +39,10 @@ Listen 80
 <VirtualHost *:80>
     ServerName $MAGENTO_HOST
     DocumentRoot /var/www/htdocs
+
+    # Detect the Load-Balancer-Header and set the header magento expects
+    SetEnvIf X-Forwarded-Proto https HTTPS=on
+    SetEnv MAGE_IS_DEVELOPER_MODE "true"
 </VirtualHost>
 
 AccessFileName .htaccess
